# KUL_OCR

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  LICENSE  README.md  docker-compose.yaml  justfile  main.py  pyproject.toml  pyrightconfig.json  pytesseract_gitlab.py  pytest.ini  requirements.txt  task1_ocr.py  task2-ocr_mkr.py  text.txt
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CONVENTIONAL_COMMITS.md  IMPORTANT_COMMANDS.md  INSTALLATION.md
scripts/: create_database.py  main.py  setup_sqlite3_db.py
src/kul_ocr/: config.py
src/kul_ocr/domain/: exceptions.py  model.py  ports.py  structs.py
src/kul_ocr/entrypoints/: api.py  celery_app.py  dependencies.py  exception_handlers.py  schemas.py  tasks.py
src/kul_ocr/service_layer/: helpers.py  parsing.py  services.py  uow.py
src/kul_ocr/utils/: logger.py  misc.py
src/ocr/: ocr_service.py
src/ocr_kul/: __init__.py  __main__.py  cli.py  config.py  engine.py  file_manager.py  io_utils.py  ocr.py  ocr_pt.ipynb  ocr_pt.py  ocr_service.py  preprocessing.py  pytesseract.ipynb  pytesseract_gitlab.ipynb  pytesseract_gitlab.py
src/ocr_kul.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ocr_kul/adapters/: ocr_engine.py  orm.py  repository.py
src/ocr_kul/domain/: exceptions.py  model.py  ports.py  structs.py
src/ocr_kul/entrypoints/: api.py  celery_app.py  dependencies.py  exception_handlers.py  schemas.py  tasks.py
src/ocr_kul/service_layer/: config.py  parsing.py  services.py  uow.py
src/ocr_kul/utils/: logger.py  shared.py
src/utils/: file_manager.py
tests/: conftest.py  factories.py  ocr_service_test.py  test_cli.py  test_config.py  test_engine.py  test_io_utils.py  test_portability.py  test_preprocessing.py  test_type_coverage.py
tests/fakes/: repositories.py  storages.py  uow.py
tests/integration/: conftest.py  test_tasks.py  test_uow.py
tests/integration/adapters/: test_document_repository.py  test_ocr_job_repository.py  test_ocr_result_repository.py
tests/json_files/: ocr_results.json  ocr_to_json
tests/txt_files/: test_ocr.txt
tests/unit/: conftest.py  test_factories.py
tests/unit/adapters/: test_filesystem_loader.py  test_local_storage.py  test_tesseract.py
tests/unit/entrypoints/: conftest.py  test_api.py  test_schemas.py
(+23 files in other folders)
