[project]
name = "kul-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.5",
    "celery>=5.5.3",
    "click>=8.1.0",
    "detect-secrets>=1.5.0",
    "dotenv>=0.9.9",
    "msgspec>=0.19.0",
    "pillow>=10.0.0",
    "pre-commit>=4.4.0",
    "pytesseract>=0.3.13",
    "pytest>=9.0.0",
    "pytest-env>=1.2.0",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
ocr = "ocr_kul.cli:main"

[tools.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "basedpyright>=1.33.0",
]

[tools.pyright]
reportExplicitAny = false
