[project]
name = "kul-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.22.5",
    "celery>=5.5.3",
    "celery-stubs>=0.1.3",
    "celery-types>=0.23.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.121.3",
    "msgspec>=0.19.0",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.6",
    "pytesseract>=0.3.13",
    "sqlalchemy>=2.0.44",
    "structlog>=25.5.0",
]

[tools.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "basedpyright>=1.33.0",
    "detect-secrets>=1.5.0",
    "httpx>=0.28.1",
    "pre-commit>=4.5.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-beartype",
    "pytest-celery>=1.2.1",
    "pytest-env>=1.2.0",
    "ruff>=0.14.6",
]

[tool.uv.sources]
pytest-beartype = { git = "https://github.com/beartype/pytest-beartype", branch = "main" }

[tools.pyright]
reportExplicitAny = false
